--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "dependencies": {
     "lodash.merge": "^4.6.2",
     "needle": "^2.5.2",
-    "stream-parser": "~0.3.1"
+    "stream-parser": "^0.3.1"
   },
   "devDependencies": {
     "eslint": "^8.2.0",
